Completando y mejorando redación | DB

--- a/4º Año/Bases de Datos/Unidad 11/2. Recuperación de Errores, Concurrencia e Interbloqueo.md
+++ b/4º Año/Bases de Datos/Unidad 11/2. Recuperación de Errores, Concurrencia e Interbloqueo.md
@@ -1,15 +1,15 @@
-Al especificar un valor de punto de commit para cada nodo, se asegura de que el servidor más crítico no se bloquee si se produce un fallo durante la fase de preparación o confirmación. Para establecer la ***commit point strength*** de una base de datos basta con agregar una línea adicional en el archivo de configuración durante la inicialización de esta misma. Este valor solo se utilizará para determinar el punto de commit en una transacción distribuida.
+Al especificar un valor de punto de compromiso para cada nodo, se asegura de que el servidor más crítico no se bloquee si se produce un fallo durante la fase de preparación o confirmación. Para establecer la ***commit point strength*** de una base de datos basta con agregar una línea adicional en el archivo de configuración durante la inicialización de esta misma. Este valor solo se utilizará para determinar el punto de commit en una transacción distribuida.
 Dado que el punto de commit almacena información sobre el estado de la transacción, este debe ser almacenado en un nodo que no se caiga a menudo y siempre esté disponible en caso de que otros nodos necesiten información sobre el estado de la transacción. Por lo que es recomendable establecer el commit point strength de una base de datos en relación con la cantidad de datos críticos compartidos en ella.
 
 ## Transacciones en Duda
 
-El mecanismo de commit de tres fases asegura que todos los nodos se comprometan o realicen un retroceso en forma conjunta. En caso de que suceda alguno de los siguientes problemas la transacción se convierte en ***dudosa*** (In-Doubt):
+El compromiso en tres fases asegura que todos los nodos se comprometan o realicen un retroceso en forma conjunta. En caso de que suceda alguno de los siguientes problemas la transacción se convierte en ***dudosa*** (In-Doubt):
 
 1. Un servidor que ejecuta el software de la base de datos se bloquea.
 2. Se desconectan de la red dos o más nodos que estaban involucrados en la transacción global.
 3. Se produce un error de software no manejado.
 
-En la mayoría de los casos, la base de datos resuelve automáticamente la transacción que está en duda a través de un ***proceso de recuperación*** o recoverer process. Aunque le proceso de resolución de dicho problema depende de la fase en la que se encuentre la transacción distribuida.
+En la mayoría de los casos, la base de datos resuelve automáticamente la transacción que está en duda a través de un ***proceso de recuperación***. Aunque el proceso de resolución de dicho problema depende de la fase en la que se encuentre la transacción distribuida.
 Si el error ocurre durante la fase de preparación, la secuencia de eventos que ocurre es la siguiente:
 
 1. Un usuario se conecta a un cliente y ejecuta una transacción de forma distribuida.
