--- a/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos Distribuidas.md
+++ b/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos Distribuidas.md
@@ -1,76 +1,131 @@
 Los sistemas de ***base de datos distribuidas (BDD)*** buscan la integración de diversos sistemas de gestión de bases de datos, no necesariamente homogéneos, para dar a los usuarios una visión global de la información disponible. El proceso de integración no implica la centralización de la información, sino que la información se mantiene distribuida, en diversas localidades y sistemas de de bases de datos distribuidos los cuales permiten el acceso a ella como si estuviera localizada en un solo lugar.
-La distribución de la información permite, entre otras cosas, tener copias de la información para accesos más rápidos y para respaldo en caso de fallas. En este tipo de bases de datos cada entidad que la conforma, ya sean tablas, registros, procedimientos almacenados, etc. puede estar compuesta por muchos fragmentos distribuidos por varios nodos.
-Cada entidad puede tener varias copias idénticas, logrando así una mayor disponibilidad de los datos y resistencia a fallos. De este modo la caida de un nodo en particular no afectaria el normal funcionamiento del sistema distribuido. Puede que ciertas unidades esten físicamente particionada en varias piezas disjuntas o inclusive que existan varias replicas particionadas. Por lo tanto se puede distinguir entre entidades lógicas (o global) y las distintas copias que existen del mismo en las distintas localidades.
 
-## Fragmentación
+>[!tldr] Bases de Datos Homogéneas y Heterogéneas
+>En los sistemas de ***bases de datos distribuidas homogéneas***, todos los sitios usan el mismo software de gestión, son conscientes unos de otros y cooperan en el procesamiento de solicitudes. Los sitios locales ceden parte de su autonomía para modificar esquemas o software, y deben colaborar en el intercambio de información sobre transacciones para permitir su procesamiento entre varios sitios.
+>Mientras que en las ***bases de datos distribuidas heterogéneas***, los sitios pueden usar diferentes esquemas y software de gestión. Algunos sitios pueden no conocer la existencia de otros y ofrecen cooperación limitada en el procesamiento de transacciones. Las diferencias en los esquemas complican el procesamiento de consultas, y la diversidad de software dificulta el manejo de transacciones que involucran múltiples sitios.
 
-Una relación $r$ está fragmentada, cuando se divide en cierta cantidad de fragmentos $r_1, r_2, \cdots , r_n$. Esto fragmentos deben contener la información suficiente como para reconstruir la relación $R$ original. En las bases de datos distribuidas se pueden dar dos tipo de fragmentación, la ***fragmentación horizontal*** y la ***fragmentación vertical***.
-En la fragmentación horizontal se divide las relaciones asignando cada tupla de $R$ a uno o varios fragmentos, donde cada fragmento tendría la siguiente forma:
+## Almacenamiento Distribuido
+
+Considérese una relación $r$ que hay que almacenar en la base de datos. Los sistemas distribuidos poseen dos enfoques del almacenamiento de esta relación en la base de datos distribuida:
+
+- **Réplica**: El sistema conserva varias copias (réplicas) idénticas de la relación y guarda cada réplica en un sitio diferente.
+- **Fragmentación**. El sistema divide la relación en varios fragmentos y guarda cada fragmento en un sitio diferente.
+
+Se puede combinar ambos enfoques dividiendo las relaciones en fragmentos y teniendo distintas réplicas para cada fragmento. Esta distribución de la información permite, accesos más rápidos, mayor disponibilidad y una mayor respaldo en caso de fallas. De este modo la caída de un nodo en particular no afectaría el normal funcionamiento del sistema distribuido.
+
+Puede que ciertas unidades estén físicamente particionada en varias piezas disjuntas o inclusive que existan varias réplicas particionadas. Por lo tanto, se puede distinguir entre entidades lógicas (o global) y las distintas copias que existen del mismo en las distintas localidades.
+
+### Réplica de Datos
+
+Cuando se replica una relación, se guarda una copia de esta en dos o más sitios. En el caso más extremo se tiene una ***réplica completa***, en la que se guarda una copia en cada sitio del sistema. Las réplicas presentan varias ventajas e inconvenientes:
+
+- **Disponibilidad**. Si alguno de los sitios que contiene la relación $r$ falla, esa relación puede hallarse en otro sitio distinto.
+- **Paralelismo incrementado**. En el caso en el que la mayoría de los accesos a la relación $r$ solo impliquen operaciones de lectura, los diferentes sitios podrían procesar en paralelo las lecturas en dicha relación.
+- **Sobrecarga durante las actualizaciones**. El sistema debe asegurar que todas las réplicas de $r$ sean consistentes. Por tanto, siempre que se actualiza $r$, hay que propagar la actualización a todos los sitios que contienen réplicas.
+
+Las réplicas mejoran el rendimiento de las operaciones de lectura y aumenta la disponibilidad de los datos para las transacciones de lectura. Sin embargo, las transacciones de actualización suponen una mayor sobrecarga. Se puede simplificar la gestión de las réplicas escogiendo una de ellas como ***copia principal***.
+
+### Fragmentación de Datos
+
+Una relación $r$ está fragmentada, cuando la misma es dividida en cierta cantidad de fragmentos $r_1, r_2, \cdots , r_n$. Estos fragmentos deben contener la información suficiente como para reconstruir la relación $r$ original. En las bases de datos distribuidas se pueden dar dos tipos de fragmentación:
+
+- Fragmentación horizontal.
+- Fragmentación vertical.
+
+En la ***fragmentación horizontal*** se divide las relaciones asignando cada tupla de $r$ a uno o varios fragmentos, donde cada fragmento tendría la siguiente forma:
 
 $$r_i = \sigma_p(r)$$ 
-Para explicar este ejemplo con mayor claridad, supongamos que tenemos una relación que conteiene los datos de las cuentas vancarias de los clientes de cada sucursal, una fragmentación horizontal seria que a cada fragmento se le asigmen solo las tuplas pertenecientes a una sucursal en particular, por ejemplo:
+Para que se entienda con mayor claridad, supongamos que tenemos una relación que contiene los datos de las cuentas bancarias de los clientes de cada sucursal, una fragmentación horizontal para esta relación consistiría en distintos fragmentos a los cuales se le asignen solo las tuplas pertenecientes a una sucursal en particular, por ejemplo:
 
-$$r_j = \sigma_{sucursal=Concordia}(Cta\_Cte)$$
+$$r_1 = \sigma_{sucursal=Concordia}(Cta\_Cte)$$
 
-En la fragmentación vertical se devide la entidad en varios subconjuntos de atributos sobre el esquema $R$ de dicha relación, donde cada fragmento tiene la siguiente forma:
+En la ***fragmentación vertical*** se divide la entidad en varios subconjuntos de atributos sobre el esquema $R$ de dicha relación, donde cada fragmento tiene la siguiente forma:
 
 $$r_i = \varPi_{R_i}(r)$$
 
-En este caso la fragmentación debe realizarce de manera tal que se pueda reconstruir la relación $r$ a partir de los distintos $r_i$. Supongamos que el esquema de nuestra tabla clientes tiene los campos identificador, edad, nombre, apellido y fecha de nacimiento, se podría fragmentar verticalmente esta tabla si creamos dos subconjuntos que solo tengan la columna edad, fecha de nacimiento e identificador, y otro subconjunto separado que tenga el apellido, nombre y el identificador. En este caso el atributo identificador estará en ambos subconjuntos porque es la única manera de poder reensambar la relación original.
+En este caso la fragmentación debe realizarse sobre las columnas de la relación de manera tal que se pueda reconstruir la relación $r$ a partir de los distintos $r_i$. Supongamos que el esquema $R$ para la relación *sucursal* es el siguiente $R(id, nombre\_sucursal, ciudad, direccion)$, un ejemplo de fragmentación vertical sería la siguiente:
+
+$$r_1 = \varPi_{id, nombre\_sucursal}(Sucursal) \qquad r_2 = \varPi_{id, ciudad, direccion}(Sucursal)$$
+
+En pocas palabras las relaciones son fragmentadas columnas, no por tuplas. En este caso el atributo `id` debe estar en ambos subconjuntos porque es la única manera de poder reensamblar la relación original.
+
+>[!note] Transparencia
+>No se le puede exigir a los usuarios de las bases de datos el saber donde están alojados los datos ni el modo que se utiliza para acceder a estos mismos, es conveniente ofrecer cierta ***transparencia***, esta característica se puede dar de varias formas en los sistemas distribuidos:
+>
+>-  **Transparencia de fragmentación**: No se le exige a los usuarios que sepan el modo en el que se han fragmentado las relaciones.
+>- **Transparencia de la réplica**: Los usuarios ven cada objeto de datos como lógicamente único.
+>- **Transparencia de la ubicación**: No se exige a los usuarios que conozcan la ubicación física de los datos.
 
 ## Tolerancia al Fallo
 
-Una aspecto importante en un sistema de bases de datos distribuidos, es la red de comunicación. La topología de la red tiene implicancia directa para la tolerancia a fallos, se puede optar por un esquema de conexión total donde cada nodo de la red esta conectado a cada uno de los demás nodos de la red o se puede implementar un esquema de conexión parcial como sería una topologia de estrella o anillo. La primera de las opciones es la mejor, ya que posee una gran tolerancia a fallos y una alta disponibilidad, con la desventaja de que es muy costosa de implementar, el segundo esquema es más barato en terminos generales pero dependiendo de la topología seleccionada puede tener mas o menos tolerancia a los fallos.
+Un aspecto importante en un sistema de bases de datos distribuidos, es la red de comunicación. La topología de la red tiene implicancia directa para la tolerancia a fallos, se puede optar por un esquema de conexión total donde cada nodo de la red está conectado a cada uno de los demás nodos de la red o se puede implementar un esquema de conexión parcial como sería una topología de estrella o anillo. La primera de las opciones es la mejor, ya que posee una gran tolerancia a fallos y una alta disponibilidad, con la desventaja de que es muy costosa de implementar, el segundo esquema es más barato en términos generales, pero dependiendo de la topología seleccionada se tendrá una mayor o menor tolerancia a fallos.
 
 >[!tldr] Localidad
->En las bases de datos distribuidas, cada localidad es conciente de la existencia de las demás, permite la ejecución de transacciones locales como si fueran globales y asume que se esta utilizando el mismo software de control de bases de datos que la bases de datos distribuida.
->Adicionalmente el gestor de la base de datos tiene un diccionario que conteiene información sobre los fragmentos, es decir, los datos que contienen dichos fragmentos y en que localidad reciden estos mismos.
+>En las bases de datos distribuidas, cada localidad es consciente de la existencia de las demás, permite la ejecución de transacciones locales como si fueran globales y asume que se está utilizando el mismo software de gestión de bases de datos que la bases de datos distribuidos.
+>Adicionalmente el gestor de la base de datos tiene un diccionario que contiene información sobre los fragmentos, es decir, los datos que contienen dichos fragmentos y en qué localidad residen estos mismos.
 
-## Commitment Distribuido
+## Transacciones Distribuidas
 
-En las bases de datos distribuidos se pueden tener ***transacciones locales*** que procesan datos que estan localizados y administrados localmente, y ***transacciones globales*** las cuales acceden a datos localizados en nodos de una o más localidades.
-Cuando una transacción accede a datos localizados en distintas localidades, esta es dividida en subtransacciones. De este modo cada transacción global esta compuesta en subtransacciones $\{T_1, T_2, \cdots, T_i\}$ donde cada $T_i$ en un particupantes en la transacción. Además cada transacción global tiene un nodo de disparo, también llamado ***coordinador***.
-Una transacción distribuida debe comprometerse en todas las localidades o abortarse totalmente. Cuando se ejecuta una transacción global, primero se debe ejecutar cada una de las subtransacciones de forma local, posteriormente se obtienen los resultados de ejecución de cada una de estas subtransacciones. Si al menos una subtransacción fue abortada entonces se abortas las demás transaccinones, en caso contrario se comprometerá la transacción y se asentarán los cambios.
-Para llevar adelante este proceso se utiliza un ***protocolo de concenso***. Este protocolo funciona bien solo en ausencia de fallos, ya que si una transacción $T_i$ responde al coordinador que esta dispuesta a comprometerse esta quedara esperando la respuesta final del coordinador, pudiendo pasar alguno de los siguientes casos:
+En las bases de datos distribuidos manejan dos tipos de transacciones. Las ***transacciones locales*** que procesan datos que están localizados y administrados localmente, y ***transacciones globales*** las cuales acceden a datos localizados en nodos de una o más localidades.
+Cuando una transacción accede a datos alojados en distintas localidades, esta es dividida en subtransacciones. De este modo cada transacción global está compuesta en subtransacciones $\{T_1, T_2, \cdots, T_i\}$ donde cada $T_i$ es un participante de la transacción global original. Cada transacción global tiene un nodo de disparo llamado ***coordinador***, que se encarga de coordinar la ejecución de las transacciones globales.
+Al igual que en las transacciones locales, una transacción distribuida debe comprometerse en todas las localidades o abortarse totalmente. Cuando se ejecuta una transacción global, primero se debe ejecutar cada una de las subtransacciones de forma local, para posteriormente obtener los resultados de ejecución de cada una de estas subtransacciones. Si al menos una subtransacción fue abortada, entonces se abortan las demás subtransacciones involucradas. En caso contrario se comprometerá la transacción y se asentarán los cambios. Para llevar adelante este proceso, los coordinadores utilizan un ***protocolo de consenso***.
+El proceso antes descrito funciona bien solo en ausencia de fallos, ya que si una transacción $T_i$ responde al coordinador que está dispuesta a comprometerse esta quedara esperando la respuesta final del coordinador, pudiendo pasar alguno de los siguientes casos:
 
 1. Si no recibe una respuesta por parte del coordinador, la transacción permanece en estado de espera indefinidamente, reteniendo todos los datos que bloqueo, en caso de que utilice un mecanismo de locking.
-2. No puede abortarse la transacción, ya que si opto por comprometerse y las demás transacciónes también se comprometieron, debe esperar que el coordinador envie un mensaje de *commit* a todas las transacciones y de este modo hacer permanentes los cambios.
-3. No puede comprometer la transacción porque si lo hace y luego el coordinador decide abortar, la transacción habrá hecho permanentes los cambios en los datos, estos pueden ser leidos por otra transacción y producir una lectura en sucio.
+2. No puede abortarse la transacción, ya que si opto por comprometerse y las demás transacciones también se comprometieron, debe esperar que el coordinador envíe un mensaje de *commit* a todas las transacciones y de este modo hacer permanentes los cambios.
+3. No puede comprometer la transacción porque si lo hace y luego el coordinador decide abortar, la transacción habrá hecho permanentes los cambios en los datos, estos pueden ser leídos por otra transacción y producir una lectura en sucio.
 
-### Commitment de Dos Fases
+### Compromiso en Dos Fases
 
-Para solucionar los problemas antes mencionados se incorpora un ***timeout*** o tiempo de espera desde que se envía un mensaje de *vote-commit*. Si transcurre un largo tiempo, pasa a un estado de recuperación enviando un mensaje un *help-me* a las demás participantes, quedando bloqueada la transacción hasta obtener una respuesta. Si un participante no recibe ninguna respuesta, se mantiene bloqueado, probablemente esté cortada la comunicación con los demás participantes.
-En el caso del coordinador, si se vence el timeout, es decir, uno o más participantes no votan, puede abortar y envía un mensaje de abort a todos los demás participantes que puedan escucharlo.
-Para la recuperación ante fallas, las bitácoras de las bases de datos distribuidas no solo deben guardar las modificaciones de los datos, sino también los mensajes que la subtransacción envia y recibe esto le sirve al sistema para recuperarse ante fallos de red o caidas de un nodo. Cuando un nodo se recupera de una falla o se reconecta luego de un tiempo de no poder acceder a otra parte de la red, tiene que averiguar que sucedió con las transiciones que estaban activas cuando la falla o desconexión ocurrió, dicha información se encuentra en su bitácora.
+El protocolo de compromiso de dos fases (2PC) es un mecanismo utilizado en bases de datos distribuidas para asegurar la consistencia de las transacciones. Se compone de dos fases principales:
 
->[!tldr] Proceso de Recuperación de Commitment de dos Fases
->Si el mensaje de *begin-vote* fue recibido por $T_i$, este es guardado con la lista de participantes que el mismo contiene, así puede saber a quien consultar. Por ejemplo si $T_i$ envió un mensaje comprometiendose y luego se desconecta, el coordinador ya puedo haber tomado la desición, pero $T_i$ nunca escucho. Entonces consulta a uno de los participantes y se da cuenta que pasó. En caso de que haya recibido un *begin-vote* pero no votó todavía, puede abortar, dado que lo más probable es que el timeout del coordinador se haya vencido.
->Este protocolo impide la mayoría de los bloqueos pero no todos, dado que un participante al recibir un commit del coordinador, sabe que todos votaron por commit, pero no sabe si todos los demás participantes saben que votaron por commit.
+1. **Fase uno**: El coordinador inicia el protocolo añadiendo el registro $<Prepare \ T>$ a su bitácora y lo guarda en un almacenamiento estable, enviando un mensaje de preparación a todos las localidades participantes en la transacción $T$. Cada localidad decide si puede comprometer su parte de la transacción global:
+	- Si no puede, registra $<Not \ T>$ y responde con un mensaje de aborto.
+	- Si puede, registra $<Prepared \ T>$, guarda la información en almacenamiento estable, y responde con un mensaje de preparación.
+2. **Fase dos**: El coordinador espera las respuestas de todos las localidades o hasta que finalice el tiempo de espera. Si todas las localidades involucradas responden con un mensaje de *willing-to-commit*, el coordinador decide comprometer $T$; de lo contrario la transacción es abortada. Posteriormente, el coordinador registra $<Commit \ T>$ o $<Abort \ T>$ en su bitácora y envía un mensaje a los participantes sobre la decisión final.
 
-### Commitment de Tres Fases
+>[!tldr] Uso de los Tiempos de Esperas (Timeout)
+>El protocolo de compromiso en dos fases no utiliza tiempos de espera mínimos al momento de procesar las transacciones, pero resulta útil su uso porque de esta forma evita bloqueos que pueden ocurrir en la versión más básica del protocolo. Además, esta técnica le permite realizar una recuperación mucho más rápida del sistema, puesto que si se supera el tiempo límite establecido el sistema pasa a un estado de recuperación, donde se bloquea la transacción hasta obtener una respuesta por parte del nodo caido.
 
-Para lograr un correcta funcionamiento y evitar todos los errores, se creo el ***commitment de tres fases***, en le cual se realizan las siguientes actividades:
+El manejo de los fallos se realiza de forma diferente dependiendo del tipo de falla que ocurra. Existen tres tipos de fallas que pueden cuando se ejecuta una transacción de forma distribuida:
 
-1. En la primer fase, el coordinador envía una *begin-vote* a los participantes al igual que en de dos fases. La segunda y tercera fase ocurre sólo si el coordinador recibe vote-commit de todos los participantes.
-2. En la fase dos el coordinador envía prepare-commit a todos los participantes. Puede que algunos sistemas de gestion de bases de datos implementen o no confirmaciones de recepción.
-3. En la fase tres el coordinador envía commits a todos los participantes y los participantes envían el commits.
+- **Fallo de una localidad**: Si una localidad falla antes de enviar *vote-commited*, el coordinado asume un aborto y aborta la transacción global. Si la localidad falla después de haber enviado el mensaje, el coordinador continúa el protocolo ignorando el fallo de la localidad.
+- **Fallo del Coordinador**: Los participantes deben esperar a que el coordinador se recupere para conocer la decisión final, lo que puede introducir posibilidades de bloqueo.
+- **División de la Red**: Si el coordinador y todos los participantes están en la misma partición, el protocolo continúa normalmente. Si están en particiones diferentes, los sitios tratan el fallo del coordinador.
 
-Al contrario que los demás mecanismos de control, el commitment en tres fases requiere el cumplimiento de una serie de supuestos para asegurar su correcto funcionamiento:
+Para la recuperación ante fallas, las bitácoras de las bases de datos distribuidas no solo deben guardar las modificaciones de los datos, sino también los mensajes que las subtransacciones envían y reciben. Estos datos agilizan el proceso de recuperación del sistema ante fallos de red o caída de nodos y ayudan en la tarea de recuperación de las ***transacciones dudosas***.
+Cuando un nodo se recupera de una falla o se reconecta luego de un tiempo de no poder acceder a otra parte de la red, tiene que averiguar qué sucedió con las transiciones que estaban activas cuando la falla o desconexión ocurrió, dicha información se encuentra en su bitácora. Gran parte de estos protocolos permiten guardar en sus bitácoras los bloqueos que posee la subtransacción $T_i$ sobre dicha localidad en particular, en este caso la estructura del registro poseerá la siguiente forma $<Prepared \ T, \ L>$, donde $L$ es la lista de todos los bloqueos que poseía la subtransacción antes de la caída.
+Adicionalmente, cuando el coordinador envía el mensaje de *begin-vote*, también envía una lista con todos los participantes en la transacción, de esta forma si $T_i$ envía un mensaje de *vote-commit* comprometiéndose y luego dicho nodo se desconecta o falla, cuando se recupere puede consultar el estado de la transacción a los demás nodos que formaban parte de la misma. Si consulta a un participante y este todavía no votó, entonces puede abortar la transacción porque es probable que el tiempo de espera del coordinador se haya agotado, en caso de que dicho participante ya haya votado se llevará adelante la acción que el haya realizado.
+Este protocolo impide la mayoría de los bloqueos, pero no todos, dado que un participante al recibir mensaje de *commit* del coordinador, sabe que todos votaron por comprometerse, pero no sabe si todos los demás participantes saben que votaron por comprometerse.
 
-1. Sólo ocurren fallas en nodos, no de red.
+### Compromiso en Tres Fases
+
+Para lograr un correcto funcionamiento y evitar todos los errores, se creó el protocolo de ***compromiso de tres fases***, en le cuál se realizan las siguientes actividades:
+
+1. **Fase uno**: El coordinador envía una *begin-vote* a los participantes al igual que en de dos fases, con la diferencia que solo se avanza a las siguientes fases solo si el coordinador recibe el mensaje de *vote-commit* de todos los participantes.
+2. **Fase dos**: El coordinador envía el mensaje de *prepare-commit* a todos los participantes. Puede que algunos sistemas de gestión de bases de datos implementen o no confirmaciones de recepción para este tipo de mensajes.
+3. **Fase tres**: El coordinador envía el mensaje de *commit* a todos los participantes y los participantes envían un acuse de recibo de ese mensaje.
+
+Al contrario que los demás mecanismos de control, el compromiso en tres fases requiere el cumplimiento de una serie de supuestos para asegurar su correcto funcionamiento:
+
+1. No ocurren fallos de red, solo fallos en los participantes.
 2. Si el nodo falla, corta la comunicación, ya que no se pueden enviar mensajes falsos de compromiso en vez de aborto.
-3. Si el nodo falla, queda fuera de acción para el proceso de commit, debiendo conocer que fallo, y una vez recuperado darse a conocer a los demás.
-4. Si un nodo no tiene fallas debe responder a los mensajes en un tiempo menor al timeout.
+3. Si el nodo falla, queda fuera de acción para el proceso de *commit*. El nodo una vez recuperado debe darse a conocer a los demás.
+4. Si un nodo no tiene fallas debe responder a los mensajes en un tiempo menor al tiempo de espera.
 5. La red no pierde mensajes, y distribuye los mensajes en el orden que fueron recibidos.
 
->[!tldr] Fallos por Timeout
->Un participante puede no recibir un *begin-vote* esperado del coordinador. En ese caso aborta. Si otro participante lo recibió, se dará cuenta que está fallado mientras espera por el *prepare-commit*. Si el coordinador está esperando por los votos y se vence el timeout antes de recibir todos los votos, enviará un mensaje de aborto. Si un participante está en el estado *willing-to-commit* y se produce el timeout, este pasa al estado *recover*, los mismo sucede para aquellos participantes que estén en estado de *ready-to-commit* y no recibe el mensaje del coordinador.
-
-Si el coordinador envía un mensaje de *prepare-commit* e inmediatamente un mensaje de *commit* a un participante, repitiendo esta secuencia para el resto de particupantes entonces este esquema sería equivalente a commitment de dos fases y el bloqueo de la transacción podría llegar a llevarse a cabo. Por lo tanto solo se envían los mensajes commit, luego de enviar el prepare-commit a todos los participantes.
-Cuando un participante recibe un *prepare-commit* sabe que todos los participantes están *willing-to-commit*, si un participante $T_i$ recibe el mensaje de commit, este sabe que todos los participantes saben que están *ready-to-commit*.
+Si un participante no recibe el mensaje de _begin-vote_ enviado por el coordinador, este mismo abortará la transacción, ya que no puede continuar sin esa instrucción inicial. Por otro lado, si otro participante sí recibió el mensaje de _begin-vote_, pero no recibe el mensaje de _prepare-commit_ del coordinador, puede deducir que hay un problema de comunicación o fallo en el sistema mientras espera la siguiente instrucción.
+Si el coordinador está esperando por los votos y se vence el tiempo de espera antes de recibir todos los votos, enviará un mensaje de *abort*. Si un participante está en el estado *willing-to-commit* y vence el tiempo de espera, este pasa al estado de *recover*, lo mismo sucede para aquellos participantes que estén en estado de *ready-to-commit* y no recibe el mensaje del coordinador.
+Si el coordinador envía un mensaje de *prepare-commit* e inmediatamente un mensaje de *commit* a un participante, repitiendo esta secuencia para el resto de participantes entonces este esquema sería equivalente a un compromiso de dos fases y el bloqueo de la transacción podría llegar a llevarse a cabo. Por lo tanto, solo se envían los mensajes *commit*, luego del *prepare-commit* a todos los participantes.
+Cuando un participante recibe un *prepare-commit* sabe que todos los participantes están *willing-to-commit*, si un participante $T_i$ recibe el mensaje de *commit*, este sabe que todos los demás participantes están *ready-to-commit*.
 Como se asume que no hay mensajes perdidos y estos se reciben instantáneamente en orden, cuando el participante $T_i$ se compromete, cada participante o recibió un *prepare-commit*, o fallo con anterioridad. Esto quiere decir que es imposible que estén en los estados *willing-to-commit* y *committed* al mismo tiempo. Esto nos plantea dos situaciones posibles:
 
-1. Un participante (activo o fallado) no puede entrar en un estado committed mientras algún participante activo está en el estado *willing-to-commit*.
-2. Un participante (activo o fallado) no puede entrar en un estado *aborted* mientras algún participante (activo o fallado) entró en el estado *committed* o *ready-to-commit*.
+1. Un participante (activo o fallado) no podrá entrar en un estado *committed* mientras exista algún participante activo que esté en estado *willing-to-commit*.
+2. Un participante (activo o fallado) no puede entrar en un estado *aborted* si algún participante (activo o fallado) ya se encuentra en estado *committed* o *ready-to-commit*.
 
-Por estas dos situaciones. Cuando uno o más participantes detectan la necesidad de recuperación a causa de algún timeout tiene que averiguar el estado de los participantes vivos. Si están todos en *willing-to-commit* o *aborted*, se sabe que ningún participante fallado está comprometido, por lo tanto, puede abortar con seguridad. Si cualquiera de estos participantes alcanzó un *ready-to-commit*, entonces ninguna transacción fallada puede estar *aborted*, por lo tanto, puede comprometerse con seguridad. En tal caso primero deben llevarse a todos los demás participantes al estado *ready-to-commit* y luego al estado *committed*. Esto es porque durante la recuperación algún participante puede fallar y puede que algunos participantes esten en *willing-to-commit* y otros en *committed*.
+Por estas dos situaciones. Cuando uno o más participantes detectan la necesidad de recuperación a causa de algún timeout tiene que averiguar en que estado se encuentra los participantes activos. Basándose en el estado de los participantes se pueden tomar las siguientes decisiones:
+
+- Si están todos en *willing-to-commit* o *aborted*, se sabe que ningún participante fallado está comprometido, por lo tanto, puede abortar con seguridad.
+- Si al menos uno de los participantes alcanzó el estado de *ready-to-commit*, entonces ninguna transacción fallada puede estar en estado *aborted*, por lo tanto, puede comprometerse con seguridad.
+
+En el segundo caso, primero se deben llevar a todos los demás participantes al estado *ready-to-commit* para posteriormente comprometer la transacción de forma global. El procedimiento se realiza de esta forma porque durante el proceso de recuperación algún participante puede fallar y puede que otros participantes estén en estado *willing-to-commit* y otros en *committed*.
