Unidad 11 done | DB

--- a/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos Distribuidas.md
+++ b/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos Distribuidas.md
@@ -87,6 +87,8 @@ El protocolo de compromiso de dos fases (2PC) es un mecanismo utilizado en bases
 >[!tldr] Uso de los Tiempos de Esperas (Timeout)
 >El protocolo de compromiso en dos fases no utiliza tiempos de espera mínimos al momento de procesar las transacciones, pero resulta útil su uso porque de esta forma evita bloqueos que pueden ocurrir en la versión más básica del protocolo. Además, esta técnica le permite realizar una recuperación mucho más rápida del sistema, puesto que si se supera el tiempo límite establecido el sistema pasa a un estado de recuperación, donde se bloquea la transacción hasta obtener una respuesta por parte del nodo caido.
 
+![[estados-participante-dos-fases.png]]
+
 El manejo de los fallos se realiza de forma diferente dependiendo del tipo de falla que ocurra. Existen tres tipos de fallas que pueden cuando se ejecuta una transacción de forma distribuida:
 
 - **Fallo de una localidad**: Si una localidad falla antes de enviar *vote-commited*, el coordinado asume un aborto y aborta la transacción global. Si la localidad falla después de haber enviado el mensaje, el coordinador continúa el protocolo ignorando el fallo de la localidad.
@@ -116,6 +118,9 @@ Al contrario que los demás mecanismos de control, el compromiso en tres fases r
 
 Si un participante no recibe el mensaje de _begin-vote_ enviado por el coordinador, este mismo abortará la transacción, ya que no puede continuar sin esa instrucción inicial. Por otro lado, si otro participante sí recibió el mensaje de _begin-vote_, pero no recibe el mensaje de _prepare-commit_ del coordinador, puede deducir que hay un problema de comunicación o fallo en el sistema mientras espera la siguiente instrucción.
 Si el coordinador está esperando por los votos y se vence el tiempo de espera antes de recibir todos los votos, enviará un mensaje de *abort*. Si un participante está en el estado *willing-to-commit* y vence el tiempo de espera, este pasa al estado de *recover*, lo mismo sucede para aquellos participantes que estén en estado de *ready-to-commit* y no recibe el mensaje del coordinador.
+
+![[estados-participantes-tres-fases.png]]
+
 Si el coordinador envía un mensaje de *prepare-commit* e inmediatamente un mensaje de *commit* a un participante, repitiendo esta secuencia para el resto de participantes entonces este esquema sería equivalente a un compromiso de dos fases y el bloqueo de la transacción podría llegar a llevarse a cabo. Por lo tanto, solo se envían los mensajes *commit*, luego del *prepare-commit* a todos los participantes.
 Cuando un participante recibe un *prepare-commit* sabe que todos los participantes están *willing-to-commit*, si un participante $T_i$ recibe el mensaje de *commit*, este sabe que todos los demás participantes están *ready-to-commit*.
 Como se asume que no hay mensajes perdidos y estos se reciben instantáneamente en orden, cuando el participante $T_i$ se compromete, cada participante o recibió un *prepare-commit*, o fallo con anterioridad. Esto quiere decir que es imposible que estén en los estados *willing-to-commit* y *committed* al mismo tiempo. Esto nos plantea dos situaciones posibles:
