--- a/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
@@ -66,17 +66,16 @@ La ***ganancia de una antena*** es una medida de su direccionalidad. Podemos def
 La antena más común en las microondas es la parabólica tipo plato, que posee un diámetro típico de unos 3 metros. Esta antena se fija rígidamente de forma tal que el haz debe estar perfectamente enfocado siguiendo la trayectoria visual hacia la antena receptora. Para conseguir transmisiones a larga distancia, se concatenan distintos enlaces punto a punto entre antenas situadas en torres adyacentes, hasta cubrir la distancia deseada.
 Este tipo de antenas operan dentro del rango de frecuencias de las microondas y mientras mayor sea la frecuencia mayor será el ancho de banda y por tanto mayor será la velocidad de transmisión. Este tipo de medios se utiliza principalmente para servicios de telecomunicaciones de larga distancia, actuando como una alternativa a medios como el cable coaxial y la fibra óptica.
 
->[!tldr] Microondas Satelitales
->Un satélite de comunicaciones actúa como una estación que retransmite microondas, enlazando dos o más estaciones base en tierra. Recibe señales en una banda de frecuencia, las amplifica o repite, y luego las retransmite en otra banda de frecuencia. Los satélites geoestacionarios operan en bandas de frecuencias llamadas ***transpondedores***.
->Para que un satélite de comunicaciones funcione con eficacia, generalmente se exige que se mantenga en una órbita geoestacionaria, de lo contrario, no estaría constantemente alineado con las estaciones base. Si dos satélites utilizaran la misma banda de frecuencias y estuvieran suficientemente próximos podrían interferirse mutuamente. Para evitar esto, los estándares actuales exigen una separación mínima que varía de acuerdo al rango de frecuencias sobre las que operan.
->Los satélites pueden orbitar a diferentes distancias de la tierra por ejemplo los satélites geoestacionarios se encuentran a 36000 km de la superficie de la tierra mientras que los satélites de órbita baja se sitúan a una distancia que varía entre los 500 a 2000 km. Adicionalmente, este tipo de satélites son mucho más pequeños siendo, por lo tanto, más baratos y teniendo un menor retardo, el principal inconveniente es que orbitan a mayor velocidad que la tierra por lo que se necesita varios satélites para cubrir un área en particular. Cabe aclarar que a mayor sea la distancia a la que orbita el satélite mayor será la superficie a la que dará servicio.   
->Los sistemas satelitales ofrecen tres configuraciones posibles, cada una adecuada para distintas situaciones. Estas configuraciones son:
->- **Enlace para difusión (Broadcast)**: Permite la transmisión unidireccional desde un punto central a múltiples estaciones dispares. Este tipo de configuración es la más utilizada para la difusión de señales televisión.
->- **Enlace punto a punto (SCPC)**: Permite establecer un canal de comunicación bidireccional entre dos estaciones terrestres determinadas y permanente, permitiendo enviar cualquier tipo de datos a través de múltiples subcanales, los cuales pueden varias dinámicamente a lo largo del tiempo. Este tipo de configuraciones suele utilizarse en casos donde el nivel de tráfico entre dos estaciones es alta.
->- **Enlace multipunto (VSAT)**: Permite la transmisión de señales bidireccionales entre una estación primaria y múltiples estaciones secundarias, asignando el canal a demanda, esto quiere decir que los tiempos de respuesta están fuertemente determinados por el nivel de tráfico. Este tipo de configuraciones suele aplicarse en organizaciones que poseen un centro de cómputo central y múltiples delegaciones o sucursales que emplean sus servicios.
+### Microondas Satelitales
 
+Un satélite de comunicaciones actúa como una estación que retransmite microondas, enlazando dos o más estaciones base en tierra. Recibe señales en una banda de frecuencia, las amplifica o repite, y luego las retransmite en otra banda de frecuencia. Los satélites geoestacionarios operan en bandas de frecuencias llamadas ***transpondedores***.
+Para que un satélite de comunicaciones funcione con eficacia, generalmente se exige que se mantenga en una órbita geoestacionaria, de lo contrario, no estaría constantemente alineado con las estaciones base. Si dos satélites utilizaran la misma banda de frecuencias y estuvieran suficientemente próximos podrían interferirse mutuamente. Para evitar esto, los estándares actuales exigen una separación mínima que varía de acuerdo al rango de frecuencias sobre las que operan.
+Los satélites pueden orbitar a diferentes distancias de la tierra por ejemplo los satélites geoestacionarios se encuentran a 36000 km de la superficie de la tierra mientras que los satélites de órbita baja se sitúan a una distancia que varía entre los 500 a 2000 km. Adicionalmente, este tipo de satélites son mucho más pequeños siendo, por lo tanto, más baratos y teniendo un menor retardo, el principal inconveniente es que orbitan a mayor velocidad que la tierra por lo que se necesita varios satélites para cubrir un área en particular. Cabe aclarar que a mayor sea la distancia a la que orbita el satélite mayor será la superficie a la que dará servicio.   
+Los sistemas satelitales ofrecen tres configuraciones posibles, cada una adecuada para distintas situaciones. Estas configuraciones son:
 
-
+- **Enlace para difusión (Broadcast)**: Permite la transmisión unidireccional desde un punto central a múltiples estaciones dispares. Este tipo de configuración es la más utilizada para la difusión de señales televisión.
+- **Enlace punto a punto (SCPC)**: Permite establecer un canal de comunicación bidireccional entre dos estaciones terrestres determinadas y permanente, permitiendo enviar cualquier tipo de datos a través de múltiples subcanales, los cuales pueden varias dinámicamente a lo largo del tiempo. Este tipo de configuraciones suele utilizarse en casos donde el nivel de tráfico entre dos estaciones es alta.
+- **Enlace multipunto (VSAT)**: Permite la transmisión de señales bidireccionales entre una estación primaria y múltiples estaciones secundarias, asignando el canal a demanda, esto quiere decir que los tiempos de respuesta están fuertemente determinados por el nivel de tráfico. Este tipo de configuraciones suele aplicarse en organizaciones que poseen un centro de cómputo central y múltiples delegaciones o sucursales que emplean sus servicios.
 
 ### Ondas de Radio
 
