Seguridad en capa de aplicación y transporte | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 6/2. Integridad y Autenticacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 6/2. Integridad y Autenticacion.md
@@ -28,6 +28,6 @@ Tanto la Unión Internacional de Telecomunicaciones (ITU) como el IETF han desar
 
 ## Autenticación del Punto Terminal
 
-La autenticación del punto terminal es el proceso de demostrar a alguien la propia identidad. Es decir, es el proceso que se realiza para corroborar que la terminal por la que se está accediendo a los datos en realidad en la tuya.
+La autenticación del punto terminal es el proceso de demostrar a alguien la propia identidad. Es decir, es el proceso de validar tu identidad a través de un terminal.
 La autenticación puede realizarse mediante código de autenticación de mensajes, con la desventaja de que el receptor queda expuesto a ***ataques de reproducción***, esto se puede solucionar utilizando ***números distintivos***, que son números que se utilizaran una única vez durante la comunicación. Al momento de intercambiar datos el receptor selecciona un número distintivo $R$ y se lo envía al emisor, el emisor calcula su código MAC utilizando la clave de autenticación y el número distintivo enviado por el receptor. Al recibir el mensaje y calcula de nuevo el código MAC utilizando clave de autenticación y el número distintivo, si el código coincide entonces el mensaje proviene efectivamente del emisor y no de un atacante.
 
