Capa física completada | Redes}

--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -17,19 +17,42 @@ En este contexto una ***señal analógica*** es aquella en la que la intensidad 
 >[!tldr] Señales Periódicas
 >Las ***señales periódicas*** son el tipo de señales más sencillas que se caracterizan por contener un patrón que se repite a lo largo del tiempo. La onda seno es una de las señales periódicas por antonomasia. Una onda seno genérica se representa mediante tres parámetros:
 >
->1. La **amplitud de pico** es el valor máximo de la señal en el tiempo y normalmente es un valor medido en voltios.
+>1. La **amplitud de pico** o simplemente amplitud, es el valor máximo de la señal en el tiempo y normalmente es un valor medido en voltios.
 >2. La **frecuencia** es la razón a la que la señal se repite y suele medirse en ciclos por segundo o Hercios.
 >3. La **fase** mide la posición relativa de la señal dentro de un periodo de la misma.
 >
 >La ***longitud de onda***, denotada como $\lambda$, se define como la distancia que ocupa un ciclo o en otras palabras, la distancia entre dos puntos de igual fase en dos ciclos consecutivos.
->
 
 En la práctica, las señales electromagnéticas pueden estar compuestas por múltiples frecuencias. Utilizando el análisis de Fourier, se demuestra que cualquier señal puede descomponerse en componentes sinusoidales de diferentes frecuencias. Al combinar un número adecuado de señales sinusoidales, cada una con su propia amplitud, frecuencia y fase, es posible reconstruir cualquier señal electromagnética.
 Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha. Esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
 
->[!note] Velocidad de Transmisión y Ancho de Banda
->El ***ancho de banda efectivo*** se define como la banda en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
->Existe una relación directa entre la velocidad de transmisión y el ancho de banda, ya que a mayor velocidad de transmisión, mayor es el ancho de banda necesario. Asimismo, cuanto mayor es el ancho de banda disponible, mayor es la velocidad a la que se pueden transmitir los datos. Además, el ancho de banda potencial de una señal aumenta con su frecuencia central, lo que permite mayores velocidades de transmisión.
+### Velocidad de Transmisión, Ancho de Banda y Capacidad de Canal
+
+El ***ancho de banda efectivo*** se define como la banda en la que se concentra la mayor parte de la energía de la señal. Aunque una señal puede contener frecuencias en un rango extenso, cualquier sistema de transmisión solo puede transferir una banda limitada de frecuencias, lo que limita la velocidad de transmisión máxima. Esto se debe a que, aunque las señales digitales pueden tener un ancho de banda infinito, en la práctica, el ancho de banda está restringido por las limitaciones del sistema de transmisión, lo que introduce distorsiones y posibles errores en la recepción.
+Existe una relación directa entre la velocidad de transmisión y el ancho de banda, ya que cuanto mayor es el ancho de banda disponible, mayor es la velocidad a la que se pueden transmitir los datos. Además, el ancho de banda potencial de una señal aumenta con su frecuencia central, lo que permite mayores velocidades de transmisión.
+Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden ser enviados durante un periodo de tiempo, generalmente medido en segundos, a través de un canal determinado. La capacidad de un canal va a depender de la velocidad de transmisión, el ancho de banda del mismo, el ruido que posea el medio y la taza de error.
+
+>[!tldr] Capacidad Teórica del Canal
+>Nyquist formalizo la manera de calcular la capacidad de canal para medio de transmisión exentos de ruido. En estos casos la velocidad de transmisión de un medio con un ancho de banda $B$ satisface la siguiente ecuación:
+>
+>$$C = 2 \times B$$
+>
+>Donde $C$ es la capacidad del canal en bits por segundo, esto significa que la velocidad de transmisión es el doble que el ancho de banda del canal. Esta fórmula cambia un poco en caso de que señales multinivel, quedando la siguiente fórmula:
+>
+>$$C = 2 \times B \times log_2 \ M$$
+>
+>En este caso $M$ es el número de señales en las que se divide cada cambio de estado. Si bien esta fórmula establece las bases para el cálculo de la capacidad del canal, como no tiene en cuenta el ruido no la taza de error, en la práctica esta ecuación se utiliza para calcular la capacidad teórica del canal.
+
+Existe una relación entre la velocidad de transmisión, el ruido y la tasa de error, puesto que si se aumenta la velocidad de transmisión, la cantidad de bits transmitidos aumentas, de tal manera que dado un patrón de ruido, este afectará a un mayor número de bits. Así pues, dado un nivel de ruido, cuanto mayor es la velocidad de transmisión, mayor es la tasa de errores. Shannon estudió la ***relación señal-ruido (SNR)*** definiéndola matemáticamente a través de la siguiente fórmula:
+
+$$SNR_{dB} = 10 \times log_{10} \ \frac{S}{R}$$
+
+Donde $S$ es la potencia de la señal y $R$ es la potencia del ruido. Esta expresión muestra, en decibelios, cuánto excede la señal al nivel de ruido. Una SNR alta significará una señal de alta calidad y, por tanto, la necesidad de un número reducido de repetidores.
+La relación señal-ruido es importante en la transmisión de datos digitales, porque nos permite determinar la máxima velocidad de transmisión que se puede conseguir. Una conclusión de Shannon es que la capacidad máxima del canal, en bits por segundo, verifica la siguiente ecuación:
+
+$$C = B \times log_{2} \ (1 + SNR)$$
+
+Donde $C$ es la capacidad del canal en bits por segundos y $B$ el ancho de banda del canal en hercios. Shannon probó que si la velocidad de información real en el canal es menor que la capacidad libre de errores, entonces es teóricamente posible encontrar una codificación de la señal que consiga una transmisión exenta de errores a través del canal.
 
 ## Transmisión de Datos Analógicos y Digitales
 
